# studica_ros2

./: .gitignore  CONTRIBUTING.md  CONTROL_SCOPE.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
configs/vmx_pcimu_collection/: vmx_highlevel.yaml
docs/: hardware-config-template.md  release-checklist.md  reproducibility-guide.md  vmx-lowlevel-lan.md  vmx-lowlevel-ros2-architecture.md  vmx-lowlevel-runbook.md  vmx-operation-guide.md  vmx-udp-protocol.md
scripts/: calibrate_motor_delta.py  characterize_vmx_lowlevel.py  kill_stale_motor_power_pub.sh  test_4wd_straight_lowlevel.sh  test_highlevel_cmd_vel_delta.py  test_motion_4wd_maneuvers.sh  test_motor_pairs_sync.sh  test_motor_spin_direction.sh  test_single_motor.sh  test_vmx_udp_direct.py  vmx_doctor.py
src/vmx_highlevel/: package.xml  setup.cfg  setup.py
src/vmx_highlevel/config/: vmx_cmd_vel_mux.yaml  vmx_highlevel.yaml  vmx_teleop_joy.yaml  vmx_udp_bridge.yaml
src/vmx_highlevel/launch/: vmx_gamepad_teleop.launch.py  vmx_highlevel.launch.py  vmx_highlevel_with_gamepad.launch.py
src/vmx_highlevel/test/: test_fixed_4wd_drive.py  test_udp_protocol.py
src/vmx_highlevel/vmx_highlevel/: cmd_vel_mux_node.py  diff_drive_highlevel_node.py  udp_bridge_node.py  udp_protocol.py
src/vmx_lowlevel_driver/: CMakeLists.txt  package.xml
src/vmx_lowlevel_driver/include/vmx_lowlevel_driver/: udp_protocol.hpp
src/vmx_lowlevel_driver/scripts/: build_vmx_release.sh  launch_vmx_udp_lowlevel.sh  run_vmx_udp_lowlevel.sh  send_vmx_udp_stop.py
src/vmx_lowlevel_driver/src/: titan_port_test.cpp  vmx_udp_lowlevel_daemon.cpp
src/vmx_lowlevel_driver/systemd/: vmx-udp-lowlevel.service
